# InfoStream

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  README_EN.md  main.py  pyproject.toml  web_generator.py  网页prompt.md
.github/workflows/: daily-pages.yml
configs/: run_config.json  sources.yaml  timeouts.yaml
docs/: architecture.md  cpp_ndjson_contract.md  todo.md
infostream/: cli.py
infostream/config/: loader.py  models.py
infostream/contracts/: item.py  plugin.py
infostream/digest/: generator.py  llm_client.py
infostream/logging/: run_logger.py
infostream/pipeline/: ndjson_adapter.py  orchestrator.py  router.py  transcribe.py
infostream/plugins/: bilibili_up.py  github_search.py  github_trending.py  registry.py  rss_atom.py
infostream/schemas/: digest.schema.json  item.schema.json
infostream/storage/: archive_writer.py  catalog_sqlite.py  path_rules.py
infostream/utils/: timezone.py  url_norm.py
tests/: test_catalog_sqlite.py  test_cli_validation.py  test_digest.py  test_llm_client.py  test_orchestrator_reuse.py  test_path_rules.py  test_rate_limit.py  test_registry.py  test_rss_plugin.py  test_run_config.py  test_timezone_reuse_boundary.py  test_timezone_utils.py  test_trending_quota.py
